# MAI-Pract

./: README.md  cams.cpp  contr-ip-cam.cpp  ipcamrtsp.cpp  normaldump.pcapng  rangeCOM.cpp  recTAB.txt  thermopt.cpp
Cameras/: cams.cpp  compile.txt  contr-ip-cam.cpp  ipcamrtsp.cpp  thermopt.cpp
Rangefinder/: gpio-serial-test.py  rangeM.cpp  rangedump.cpp
gui/: app.py  client.py  server.py
lab/: num1.cpp
main/: client.py  server.py
misc/: Contr.cpp  camcontrol.cpp  client.py  recTAB.txt  server.py
net/: CMakeLists.txt  client.py  clientTHR.py  server.cpp  server.py
py-cs/: Contr.cpp  client-prototype.py  client-prototype0108  client-prototype0808  client.py  rc-server.py  server-prototype.py  server-prototype0108  server-prototype1108  temp.py
src/: CMakeLists.txt  Cam.cpp  Cam.h  Contr.cpp  Contr.h  RangeF.cpp  RangeF.h  main.cpp
